--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <li><a href="#therd-sec">部品のモデリングの手順</a></li>
     <li><a href="#therd02-sec">円柱のモデリング</a></li>
     <li><a href="#fourth-sec">描いたものが消えて見つからない時</a></li>
-    <li><a href="#fifth-sec">棒を差し込む穴を開ける</a></li>
+    <li><a href="#fifth-sec">円柱に加工して部品の形にしていく</a></li>
     <li><a href="#sixth-sec">拘束って何？</a></li>
   </ul>
 
@@ -138,7 +138,8 @@
   クリックして表示させてください。<br>
   <img src="17.jpg" alt="17" width="100%" /><br><br><br>
 
-  <section id="fifth-sec"></section>
+  <section id="fifth-sec"></section>  
+  <h3>円柱を部品の形にしていく</h3>
   元々の材料の形である円柱ができたので、次に棒が刺さる穴を開けていきます。<br>
   少し特殊な穴の開け方をしますが、今回のこの部品の形状をモデリングする場合ではこのような方法の方が都合がいいので、
   3DCADの様々な使い方を学べるということでご了承ください。<br>
