--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
   <h1>FusionCADの使い方<br>正四面体の接手のモデリング</h1>
 
+    <!-- 
+  first second third fourth sixth seventh eighth ninth tenth 
+  -->
 
   <h2>目次</h2>
   <ul>
@@ -306,6 +309,26 @@
   距離は、円柱が全て切断される適当な値（12.5mm以上）の値を入れて、
   操作が切り取りになっていることを確認してOKをクリックしてください。
   <img src="59.jpg" alt="59" width="100%" /><br><br><br>
+
+  またスケッチします。今切断した断面の下の円の面でスケッチを作成してください。
+  <img src="61.jpg" alt="61" width="100%" /><br><br><br>
+
+  円ボタンをクリックして、原点を中心とする適当な直径の円を、円柱の外側と内側に１個ずつ描いてください。
+  <img src="62.jpg" alt="62" width="100%" /><br><br><br>
+
+  「等しい」拘束ボタンを押して、さっき描いた外側の円と、円柱の輪郭の円をクリックしてください。直径が等しくなって
+  描いた円が円柱の輪郭に重なります。
+  <img src="63.jpg" alt="63" width="100%" /><br><br><br>
+
+  スケッチ寸法ボタンをクリックして、内側に描いた円をクリックして直径を22mmにしてください。<br>
+  そうしたらこれでスケッチは終わりなのでスケッチを終了してください。
+  <img src="64.jpg" alt="64" width="100%" /><br><br><br>
+
+  押し出しボタンを押して、今スケッチした２つの円の間のリング型の面をクリックしてください。
+  <img src="65.jpg" alt="65" width="100%" /><br><br><br>
+
+  「距離」のところに適当に大きな値を入れて、「操作」のところが「切り取り」となっていることを確認して、OKをクリックしてください。
+  <img src="66.jpg" alt="66" width="100%" /><br><br><br>
 
   お疲れさまでした！これにて部品のモデリングは終了です！次のテキストに進んで、CAMでの操作を行ってください。
   <img src="60.jpg" alt="60" width="100%" /><br><br><br>
